--- a/styles/init.css
+++ b/styles/init.css
@@ -1,6 +1,6 @@
 #fvtt-party-resources-dashboard {
   height: auto;
-  min-height: 175px;
+  min-height: 120px;
   width: auto; }
 
 #fvtt-party-resources-dashboard .window-content > p {
